testing/syntax-error/python/syntax_error2.py
# Raspberry Pi Foundation
# Developed as part of Ada Computer Science
# 
# Usage licensed under CC BY-NC-SA 4.0


def main():
    # Demonstrates a syntax error
    name = input("Please enter your name: ")
    if name == "Ada"
        print("Hi Ada, you are one of my heroes!")
    else:
        print("Hello ", name)


# This code will run if this file is executed directly
# (i.e. not called by another program)
if __name__ == "__main__":
    main()
